# pyt

./: .gitignore  README.md  __init__.py  grafik.py  grafiktest.py  pyproject.toml  pytthon_turkish.py  setup.py  temel_fonkisyonlar.py  test.py
turkish_python.egg-info/: PKG-INFO  SOURCES.txt
